--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "azonmedia/psr-to-swoole",
-    "type": "utility",
+    "type": "library",
     "description": "Utilities to convert between Swoole and PSR request and response",
     "keywords": ["utility","psr","swoole"],
     "homepage": "https://github.com/AzonMedia/psr-to-swoole",
