added Component file

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     ],
     "require": {
         "php": ">=7.2.0",
+        "azonmedia/components": "dev-master",
         "psr/http-message": "^1.0",
         "eaglewu/swoole-ide-helper": "dev-master"
     },
