--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "Utilities to convert between Swoole and PSR request and response",
     "keywords": ["utility","psr","swoole"],
     "homepage": "https://github.com/AzonMedia/psr-to-swoole",
-    "license": "BSD-3-Clause",
+    "license": "MIT",
     "authors": [
         {
             "name": "Vesko Kenashkov",
